--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,18 @@
-<head>
-    <meta charset="utf-8">
-    ...
+{% comment %}<head>{% endcomment %}
+    {% comment %}<meta charset="utf-8">{% endcomment %}
+    {% comment %}...{% endcomment %}
 
-    {% unless page.no_latex %}
-        {% include latex.html %}
-    {% endunless %}
-</head>
+    {% comment %}{% unless page.no_latex %}{% endcomment %}
+        {% comment %}{% include latex.html %}{% endcomment %}
+    {% comment %}{% endunless %}{% endcomment %}
+{% comment %}</head>{% endcomment %}
+
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+        inlineMath: [['$','$']]
+        }
+    });
+</script>
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
